<resources>
    <string name="app_name">Weather</string>
    <string name="temp_unit_celsius">°</string>
    <string name="temp_unit_fahrenheit">°F</string>
    <string name="feels_like">Feels like:</string>
    <string name="cloudy">Clouds</string>
    <string name="currentdatetime">CurrentDateTime</string>
    <string name="currentcity">Current City</string>
    <string name="temp">Temp</string>
    <string name="cloudiness">cloudiness</string>
    <string name="testHelloWorld">Hello World!</string>
    <string name="title_activity_weather_settings">WeatherSettings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="city_selection">Select city</string>
    <string name="show_wind_speed">Show wind speed</string>
    <string name="show_pressure">Show pressure</string>
    <string name="show_string">Show</string>
    <string name="hide_string">Hide</string>
    <string name="show_feels_like_string">Show feels like</string>
    <string name="ok_label">Ok</string>
    <string name="cancel_label">Cancel</string>
    <string name="temperature_unit_title">Temperature unit</string>
    <string name="weather_yandex">https://yandex.com/weather/%s</string>
    <string name="on_this_day">https://www.timeanddate.com/on-this-day/</string>
    <string name="city_about">https://en.m.wikipedia.org/wiki/</string>
    <string name="date_format">E, dd MMMM HH:mm</string>
    <string name="wind_label">Wind</string>
    <string name="pressure_label">Pressure</string>
    <string name="settings_label">Settings</string>
    <string name="weather_settings_title">Weather Settings</string>
    <string name="dnt_save_close_label">Don\'t save and close</string>
    <string name="locate_label">Current place</string>
    <string name="hourly_time">time</string>
    <string name="theme_selection">Theme</string>
    <string name="dark_theme_label">Dark</string>
    <string name="light_theme_label">Light</string>
    <string name="city_deleted_undo_snackbar_txt">City has been deleted.</string>
    <string name="undo_city_delete_action">Undo delete</string>
    <string name="about_label">About</string>
    <string name="about_text">Simple Weather app\nAuthors unknown\nGeekbrains, 2020</string>
    <string name="not_avaliable">N/A</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">     User</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_about">About</string>
    <string name="menu_favorites">Favorites</string>
    <string name="feedback_menu">Feedback</string>
    <string name="feedback_hint_form">Feedback</string>
    <string name="feedback_send">Send</string>
    <string name="feedback_text_here">Feedback</string>
    <string name="nav_favorite_place">Favorite place</string>
    <string name="nav_other_places">Other places</string>
    <string name="nav_current_city">Current city</string>
    <string name="add_new_place_action_label">Add new place</string>
    <string name="display_weather_frame_current_place">Current place</string>
    <string name="refresh_label">Refresh</string>
    <string name="find_city_title">Search for city</string>
    <string name="search_dialog_title">Search dialog</string>
    <string name="use_build_in_icons_title">Use build in icons</string>
    <string name="history_label">History</string>
    <string name="nav_header_user_name">User name</string>
    <string name="nav_header_logout">Logout</string>

</resources>