<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:title="@string/nav_favorite_place">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_weather_details"
                        android:icon="@drawable/ic_baseline_location_on_24"
                        android:title="@string/nav_current_city" />
                </group>
            </menu>
        </item>
        <item android:title="@string/nav_other_places">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_favorites"
                        android:icon="@drawable/ic_baseline_location_city_24"
                        android:title="@string/menu_favorites" />
                </group>
            </menu>
        </item>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings_label"
            />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_school_24"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_baseline_feedback_24"
            android:title="@string/feedback_menu" />

    </group>
</menu>