<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/themeSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SwitchSettingsStyle"
        android:textOn="@string/dark_theme_label"
        android:textOff="@string/light_theme_label"
        app:showText="true"
        android:text="@string/theme_selection"
    />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/enableWindView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SwitchSettingsStyle"
        android:text="@string/show_wind_speed"
    />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/enablePressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SwitchSettingsStyle"
        android:text="@string/show_pressure"
    />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/enableFeelsLike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SwitchSettingsStyle"
        android:text="@string/show_feels_like_string"
    />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/temperatureUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SwitchSettingsStyle"
        android:text="@string/temperature_unit_title"
    />
</LinearLayout>